<resources>
    <string name="app_name">calculator</string>
    <string name="textview">TextView</string>
    <string name="N1">1</string>
    <string name="N2">2</string>
    <string name="N3">3</string>
    <string name="N4">4</string>
    <string name="N5">5</string>
    <string name="N6">6</string>
    <string name="N7">7</string>
    <string name="N8">8</string>
    <string name="N9">9</string>
    <string name="N0">0</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="mul">X</string>
    <string name="div">/</string>
    <string name="equal">=</string>
    <string name="backspace">BS</string>


</resources>